--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,16 @@
 
 python-dotenv==1.0.0
 
+# Llama-index
 llama-index==0.10.27
 llama-index-llms-openai==0.1.15
 llama-index-embeddings-openai==0.1.7
 
 ipython
+
+# CrewAI
+crewai==0.28.8
+crewai_tools==0.1.6
+langchain_community==0.0.29
 
 layers/
